<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".trivia.TriviaActivity">

    <Button
        android:id="@+id/btn_trivia_return"
        android:layout_width="172dp"
        android:layout_height="65dp"
        android:text="@string/txt_return"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959" />

    <Button
        android:id="@+id/btn_trivia_save"
        android:layout_width="172dp"
        android:layout_height="65dp"
        android:text="@string/txt_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959" />

    <Button
        android:id="@+id/btn_trivia_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="254dp"
        android:layout_height="40dp"
        android:text="TextViewTitulo"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/textViewStringScore"
        android:layout_width="94dp"
        android:layout_height="40dp"
        android:text="@string/txt_yourScore"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/textViewScore"
        android:layout_width="94dp"
        android:layout_height="40dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.124" />

    <TextView
        android:id="@+id/textViewStringIntentos"
        android:layout_width="94dp"
        android:layout_height="40dp"
        android:text="@string/txt_fallos"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <TextView
        android:id="@+id/textViewIntentos"
        android:layout_width="62dp"
        android:layout_height="36dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <TextView
        android:id="@+id/textViewOpcion1"
        android:layout_width="369dp"
        android:layout_height="52dp"
        android:layout_marginBottom="340dp"
        android:background="#44D314"
        android:text="TextView"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPregunta"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewOpcion2"
        android:layout_width="369dp"
        android:layout_height="52dp"
        android:background="#0DA7DE"
        android:text="TextView"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOpcion1"
        app:layout_constraintVertical_bias="0.059" />

    <TextView
        android:id="@+id/textViewOpcion3"
        android:layout_width="369dp"
        android:layout_height="52dp"
        android:background="#F4F00A"
        android:text="TextView"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOpcion2"
        app:layout_constraintVertical_bias="0.075" />

    <TextView
        android:id="@+id/textViewOpcion4"
        android:layout_width="369dp"
        android:layout_height="52dp"
        android:background="#FC3636"
        android:text="TextView"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOpcion3"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/textViewPregunta"
        android:layout_width="367dp"
        android:layout_height="120dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245" />

</androidx.constraintlayout.widget.ConstraintLayout>